<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="DISABLE_FEED_ADVERT"
        android:title="@string/disable_feed_advert" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="DISABLE_MARKET_CARD"
        android:title="@string/disable_market_card" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="DISABLE_ANSWER_PAGE_ADVERT"
        android:title="@string/disable_answer_page_advert" />
    <SwitchPreference
        android:defaultValue="false"
        android:key="DISABLE_IDEA_TAB"
        android:title="@string/disable_idea_tab" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="DISABLE_COLLEGE_TAB"
        android:title="@string/disable_college_tab" />
    <SwitchPreference
        android:defaultValue="true"
        android:key="DISABLE_ANSWER_LIST_AD"
        android:title="@string/disable_answer_list_ad" />
</PreferenceScreen>
